Fixes the issue with Island not showing and improves the design of the AI chat

--- a/src/App.css
+++ b/src/App.css
@@ -78,8 +78,32 @@ body {
 
 #userinput {
   animation: appear 1s forwards;
+  width: 80vw;
+  height: 50vh;
+  margin: 5px;
+  background-color: transparent;
+  color: #FAFAFA;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+  font-size: 20px;
+  padding: 10px;
+}
+
+#userinput:focus {
+  border: 1px solid rgb(72, 72, 72);
 }
 
 #chatsubmit {
+  transition: .2s;
+  margin-top: 5px;
+  margin-bottom: 10px;
   animation: appear 1s forwards;
+  width: 80vw;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+#chatsubmit:active {
+  scale: .9;
 }
